<resources>
    <string name="app_name">Bandex Agora</string>
    <string name="action_settings">Settings</string>

    <string name="title_pco">Prefeitura</string>
    <string name="title_quimica">Química</string>
    <string name="title_central">Central</string>
    <string name="title_fisica">Física</string>

    <string name="title_menu">Cardápio</string>
    <string name="title_ratings_average">Média das notas para a Fila</string>
    <string name="title_last_status">Último status há</string>
    <string name="title_minutes">minutos</string>

    <string name="title_pick_a_place">Escolha um local</string>
    <string name="title_rate_this_line">Dê uma nota para a fila</string>
    <string name="title_send">Enviar</string>

    <string name="title_evaluate_line">Avaliar Fila</string>
    <string name="title_more_details">Mais detalhes</string>
    <string name="title_great_line">Fila Muito Pequena</string>
    <string name="title_good_line">Fila Pequena</string>
    <string name="title_regular_line">Fila Média</string>
    <string name="title_bad_line">Fila Grande</string>
    <string name="title_horrible_line">Fila Enorme</string>

    <!--string name="menu_service_url">https://raw.githubusercontent.com/Bandex-usp/Bandex-App/master/menu_fake.json</string-->
    <string name="menu_service_url">http://bandexweb.herokuapp.com/menu.json</string>
    <string name="line_post_service_url">http://bandexweb.herokuapp.com/line_statuses.json</string>
    <string name="line_get_service_url">http://bandexweb.herokuapp.com/line_status.json</string>
    <!--string name="line_get_service_url">https://raw.githubusercontent.com/Bandex-usp/Bandex-App/master/line_fake.json</string!-->


    <string name="text_new_functionality">Agora você pode ficar sabendo quando os bandejões estarão fechados por motivos excepcionais, como falta d\'água ou paralisação dos funcionários.</string>

    <string name="title_new_functionality">
    Será que o bandejão vai estar fechado?
    </string>

    <string name="functionality_prompt">
    Deseja habilitar estas notificações?
    </string>


    <string name="title_updating_line">Atualizando a fila...</string>
    <string name="title_updating_menu">Atualizando o cardápio...</string>
    <string name="title_updated_menu">Cardápio atualizado!</string>
    <string name="title_updated_line">Status da fila atualizado!</string>

    <string name="title_main_dish">Principal</string>
    <string name="title_dessert">Sobremesa</string>
    <string name="title_calories">Calorias</string>
    <string name="title_meat">Carne</string>
    <string name="title_side_dish">Acompanhamento</string>
    <string name="title_salad">Salada</string>
    <string name="title_optional">Opcional</string>
    <string name="title_line_status">Status da Fila</string>
    <string name="title_current_date">Data atual</string>
    <string name="title_last_evaluation">Última avaliação: </string>
    <string name="last_evaluation_time">Horário</string>
    <string name="sucess_evaluated">Avaliado com sucesso!</string>
    <string name="evaluating">Avaliando...</string>
    <string name="evaluate_error">Ops... Não foi possível avaliar</string>

    <string name="title_lunch">Almoço</string>
    <string name="title_dinner">Jantar</string>
    <string name="line_status_prompt">Como está a fila agora?</string>
    <string name="restaurant_prompt">Escolha um Bandejão</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">10sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="fa_chevron_right">&#xf054;</string>
    <string name="closedRestaurant">Restaurante Fechado.</string>

    <string name="preferences_line_cache_time">line_cache_time</string>
    <string name="preferences_line_cache">line_cache</string>
    <string name="preferences_menu_cache">menu_cache_new</string>
    <string name="preferences_entry_date_cache">entry_date_new</string>
    <string name="title_activity_more_details">Mais detalhes</string>

    <string name="title_activity_preferences">Preferências</string>

    <string name="title_activity_evaluate_line">Avaliar Fila</string>
    <string name="title_bandex">Bandejão</string>
    <string-array name="days_array">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>


    <color name="home_background_color">#EDEDED</color>
    <color name="white">#ffffff</color>
    <string name="title_activity_new_functionality">Novidades</string>






</resources>
