<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usp.ime.bandex.EvaluateLineActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="br.usp.ime.bandex.EvaluateLineActivity"
        android:id="@+id/ll_eval"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/fundo_site_usp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:text="@string/restaurant_prompt"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_radios"
            android:gravity="top">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_central"
                android:id="@+id/activity_evaluate_line_rb_central"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_quimica"
                android:id="@+id/activity_evaluate_line_rb_quimica"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fisica"
                android:id="@+id/activity_evaluate_line_rb_fisica"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
            />
        </RadioGroup>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitleStatus"
            android:textColor="@android:color/black"
            android:gravity="bottom"
            android:text="@string/line_status_prompt"
            android:textSize="20sp" />

        <RatingBar
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            style="@style/pedestrianRatingBar"
            android:stepSize="1.0"
            />

        <Button
            android:text="@string/title_send"
            android:id="@+id/activity_evaluate_line_btn_send"
            android:background="@drawable/botao"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            >
        </Button>

    </LinearLayout>
</ScrollView>