<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fundo_site_usp"
    android:fillViewport="true"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <!-- ll_main -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:background="@color/fundo_site_usp"
        android:id="@+id/activity_main_ll">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ops! Verifique sua conexão com a internet e atualize!"
            android:id="@+id/activity_main_tv_general_info"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/activity_main_ll_central"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/activity_main_central_tv_title"
                android:text="@string/title_central"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >
                <LinearLayout
                    android:id="@+id/activity_main_ll_central_info"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.97"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/activity_main_central_tv_mistura"
                        android:text="@string/title_main_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_central_tv_sobremesa"
                        android:text="@string/title_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_central_tv_line"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout> <!-- activity_main_ll_central_info -->
                <TextView
                    android:layout_weight="0.03"
                    android:textSize="20sp"
                    android:id="@+id/arrow2"
                    android:layout_gravity="center"
                    android:text="@string/fa_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout> <!-- ll_central -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/activity_main_ll_fisica"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/activity_main_fisica_tv_title"
                android:text="@string/title_fisica"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >
                <LinearLayout
                    android:id="@+id/activity_main_ll_fisica_info"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.97"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/activity_main_fisica_tv_mistura"
                        android:text="@string/title_main_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_fisica_tv_sobremesa"
                        android:text="@string/title_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_fisica_tv_line"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout> <!-- activity_main_ll_fisica_info -->
                <TextView
                    android:layout_weight="0.03"
                    android:textSize="20sp"
                    android:id="@+id/arrow1"
                    android:layout_gravity="center"
                    android:text="@string/fa_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>


        </LinearLayout> <!-- ll_fisica -->

        <LinearLayout
            android:layout_weight="0.97"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/activity_main_ll_quimica"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/activity_main_quimica_tv_title"
                android:text="@string/title_quimica"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >
                <LinearLayout
                    android:id="@+id/activity_main_ll_quimica_info"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.97"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/activity_main_quimica_tv_mistura"
                        android:text="@string/title_main_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_quimica_tv_sobremesa"
                        android:text="@string/title_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_quimica_tv_line"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout> <!-- activity_main_ll_quimica_info -->
                <TextView
                    android:layout_weight="0.03"
                    android:textSize="20sp"
                    android:id="@+id/arrow3"
                    android:layout_gravity="center"
                    android:text="@string/fa_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout> <!-- ll_quimica -->

        <LinearLayout
            android:layout_weight="0.97"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:id="@+id/activity_main_ll_pco"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/activity_main_pco_tv_title"
                android:text="@string/title_pco"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" >
                <LinearLayout
                    android:id="@+id/activity_main_ll_pco_info"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.97"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/activity_main_pco_tv_mistura"
                        android:text="@string/title_main_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_pco_tv_sobremesa"
                        android:text="@string/title_dessert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/activity_main_pco_tv_line"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout> <!-- activity_main_ll_pco_info -->
                <TextView
                    android:layout_weight="0.03"
                    android:textSize="20sp"
                    android:id="@+id/arrow4"
                    android:layout_gravity="center"
                    android:text="@string/fa_chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout> <!-- ll_PCO -->

        <Button
            android:text="@string/title_evaluate_line"
            android:id="@+id/activity_main_btn_evaluate_line"
            android:background="@drawable/botao"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="15dp"
            android:textAllCaps="false"
            >
        </Button>

    </LinearLayout>
</ScrollView>